--- a/Readme
+++ b/Readme
@@ -7,17 +7,18 @@ News
    I have removed the opengl specific part from esdl, now esdl
    requires that wx is available for opengl usage.
    
-   This means that this release is not backwards compatiable 
+   This means that this release is not backwards compatible 
    with the old release, some gl functions have been changed in wx gl.
 
    This is done to only have one gl.erl in your (erlang) system,
    and it also more up to date with the standard.
-   Actually only wx/ebin/gl.beam, wx_util.beam and wx/priv/OS/erl_gl.[so|dll]
+   Actually only wx/ebin/gl.beam wx/ebin/glu.beam and wx/priv/OS/erl_gl.[so|dll]
    is required.
 
    Also using wx's opengl allowed me to create an opengl thread,
    if the erlang emulator is multithreaded. So now sdl with opengl
    works for both smp and single threaded erlang.
+   
    
 What is it?
 ===========
@@ -40,7 +41,7 @@ Compilation and Installation
 =============================
 
 You need erlang (www.erlang.org). This release has only been
-tested on R14B01, it requires that version for opengl to work.
+tested on R14B02, it requires that version for opengl to work.
 
 You need libsdl (www.libsdl.org) (the development package) version > 1.2.5
 
